# cicd-showcase

./: .gitignore  README.md  docker-compose.yml  sonar-project.properties
.github/: labeler.yml
.github/workflows/: cd.yml  ci.yml  nightly-security.yml  pr-validation.yml  reusable-docker.yml
backend/: CMakeLists.txt  main.cpp  tests.cpp
docker/: Dockerfile.backend
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  index.css
infra/ansible/: playbook.yml
infra/ansible/inventory/: hosts.yml
infra/ansible/roles/app_deploy/tasks/: main.yml
infra/ansible/roles/common/tasks/: main.yml
infra/ansible/roles/docker/tasks/: main.yml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
monitoring/: alert_rules.yml  prometheus.yml
scripts/: health_check.py  pipeline_status.py  pre-commit.sh
